# Flick-Picker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: CMakeLists.txt  requirements.txt
backend/app/: crud.py  db.py  main.py  models.py  recommender.py  schemas.py  tmdb_client.py
backend/models/: ContentBasedModel.py  MatrixFactorizationModel.py  model_bridge.py
backend/src/: HybridRecommender.cpp  HybridRecommender.h  Hybrid_Base_Code.cpp  main.cpp
backend/tests/: test_image_proxy.py
frontend/: background.js  index.html  manifest.json  popup.html  popup.js
frontend/extension/: manifest.json  options.bundle.js  options.html  package.json  popup.bundle.js  popup.html  popup.js  popup.ts  tsconfig.json
frontend/extension/src/: chrome.d.ts  jsx.d.ts  options.tsx  popup.tsx
